Adeguamento Contabilizzazione Massiva per modifiche analitica